--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -17,23 +17,40 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserCell" textLabel="56y-I4-Q7M" style="IBUITableViewCellStyleDefault" id="Tpu-LU-AzR">
-                                <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserCell" rowHeight="100" id="Tpu-LU-AzR" customClass="UserTVCell" customModule="Random_Users" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Tpu-LU-AzR" id="CXI-d9-bXN">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="56y-I4-Q7M">
-                                            <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cKj-2x-q9l">
+                                            <rect key="frame" x="0.0" y="0.0" width="93" height="85"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="93" id="Rn8-N9-l7C"/>
+                                                <constraint firstAttribute="height" constant="85" id="n6l-w7-vKQ"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Avy-gT-1RZ">
+                                            <rect key="frame" x="113" y="33" width="226" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottomMargin" secondItem="Avy-gT-1RZ" secondAttribute="bottom" constant="35" id="7sV-7Z-0Ms"/>
+                                        <constraint firstAttribute="bottom" secondItem="cKj-2x-q9l" secondAttribute="bottom" constant="15" id="CZv-IB-JwJ"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="Avy-gT-1RZ" secondAttribute="trailing" constant="20" id="GbY-eh-7Xc"/>
+                                        <constraint firstItem="Avy-gT-1RZ" firstAttribute="top" secondItem="CXI-d9-bXN" secondAttribute="topMargin" constant="22" id="Uuq-fR-7OK"/>
+                                        <constraint firstItem="cKj-2x-q9l" firstAttribute="leading" secondItem="CXI-d9-bXN" secondAttribute="leading" id="YhV-4N-Axn"/>
+                                        <constraint firstItem="cKj-2x-q9l" firstAttribute="top" secondItem="CXI-d9-bXN" secondAttribute="top" id="Zs9-uv-0mT"/>
+                                        <constraint firstItem="Avy-gT-1RZ" firstAttribute="leading" secondItem="cKj-2x-q9l" secondAttribute="trailing" constant="20" id="zns-G9-RhH"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="personNameLabel" destination="Avy-gT-1RZ" id="Bfm-b1-hqI"/>
+                                    <outlet property="userImageView" destination="cKj-2x-q9l" id="SVQ-ZB-Noi"/>
                                     <segue destination="Jfo-nI-k9N" kind="show" identifier="ShowUserSegue" id="tiy-1F-SNe"/>
                                 </connections>
                             </tableViewCell>
@@ -67,21 +84,25 @@
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="28" translatesAutoresizingMaskIntoConstraints="NO" id="hX7-lj-tLE">
-                                <rect key="frame" x="115" y="370" width="144.5" height="100"/>
+                                <rect key="frame" x="8" y="370" width="359" height="94"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bob Dyaln " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rcl-XU-inF">
-                                        <rect key="frame" x="0.0" y="0.0" width="144.5" height="36"/>
+                                        <rect key="frame" x="107.5" y="0.0" width="144.5" height="36"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="30"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="irQ-Jt-ZY7">
-                                        <rect key="frame" x="35.5" y="64" width="74" height="36"/>
-                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="30"/>
+                                        <rect key="frame" x="20" y="64" width="319" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="25"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstItem="irQ-Jt-ZY7" firstAttribute="leading" secondItem="hX7-lj-tLE" secondAttribute="leading" constant="20" id="BiK-up-2C8"/>
+                                    <constraint firstAttribute="trailing" secondItem="irQ-Jt-ZY7" secondAttribute="trailing" constant="20" id="eF6-UL-KKB"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -90,8 +111,8 @@
                             <constraint firstItem="efw-fr-vHN" firstAttribute="trailing" secondItem="Ugc-5h-Rrg" secondAttribute="trailing" constant="68" id="0Ss-o8-1s8"/>
                             <constraint firstItem="Ugc-5h-Rrg" firstAttribute="leading" secondItem="efw-fr-vHN" secondAttribute="leading" constant="67" id="Ds8-yq-jX5"/>
                             <constraint firstItem="Ugc-5h-Rrg" firstAttribute="top" secondItem="efw-fr-vHN" secondAttribute="top" constant="61" id="Qxm-Da-6eY"/>
-                            <constraint firstItem="efw-fr-vHN" firstAttribute="trailing" secondItem="hX7-lj-tLE" secondAttribute="trailing" constant="115.5" id="fKL-Xn-pY7"/>
-                            <constraint firstItem="hX7-lj-tLE" firstAttribute="leading" secondItem="efw-fr-vHN" secondAttribute="leading" constant="115" id="p0R-hZ-NWd"/>
+                            <constraint firstItem="efw-fr-vHN" firstAttribute="trailing" secondItem="hX7-lj-tLE" secondAttribute="trailing" constant="8" id="fKL-Xn-pY7"/>
+                            <constraint firstItem="hX7-lj-tLE" firstAttribute="leading" secondItem="efw-fr-vHN" secondAttribute="leading" constant="8" id="p0R-hZ-NWd"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="efw-fr-vHN"/>
                     </view>
