--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -61,41 +61,47 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="WYl-01-wOg">
-                                <rect key="frame" x="67.5" y="171" width="240" height="325.5"/>
-                                <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SYF-VK-xpj">
-                                        <rect key="frame" x="0.0" y="0.0" width="240" height="240"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="240" id="cTY-AW-5sE"/>
-                                            <constraint firstAttribute="height" constant="240" id="uo6-KH-YSe"/>
-                                        </constraints>
-                                    </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sjl-Ee-X5N">
-                                        <rect key="frame" x="0.0" y="248" width="240" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iAg-LB-kKA">
-                                        <rect key="frame" x="0.0" y="276.5" width="240" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BC4-NS-gN6">
-                                        <rect key="frame" x="0.0" y="305" width="240" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                            </stackView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SYF-VK-xpj">
+                                <rect key="frame" x="17.5" y="163.5" width="340" height="340"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="340" id="c6x-Xa-jQk"/>
+                                    <constraint firstAttribute="height" constant="340" id="mrD-HW-T6q"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sjl-Ee-X5N">
+                                <rect key="frame" x="16" y="512.5" width="343" height="21"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iAg-LB-kKA">
+                                <rect key="frame" x="16" y="541.5" width="343" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BC4-NS-gN6">
+                                <rect key="frame" x="16" y="570" width="343" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="WYl-01-wOg" firstAttribute="centerX" secondItem="G4C-WG-9Yn" secondAttribute="centerX" id="qZ4-1R-gGh"/>
-                            <constraint firstItem="WYl-01-wOg" firstAttribute="centerY" secondItem="G4C-WG-9Yn" secondAttribute="centerY" id="rVy-Vt-iS1"/>
+                            <constraint firstItem="SYF-VK-xpj" firstAttribute="centerX" secondItem="G4C-WG-9Yn" secondAttribute="centerX" id="6yZ-Eo-bfq"/>
+                            <constraint firstItem="BC4-NS-gN6" firstAttribute="leading" secondItem="s6J-Ws-vkt" secondAttribute="leading" constant="16" id="Cyk-fS-UCJ"/>
+                            <constraint firstItem="Sjl-Ee-X5N" firstAttribute="top" secondItem="SYF-VK-xpj" secondAttribute="bottom" constant="9" id="HXW-qO-xru"/>
+                            <constraint firstItem="iAg-LB-kKA" firstAttribute="top" secondItem="Sjl-Ee-X5N" secondAttribute="bottom" constant="8" id="K6b-6E-bqW"/>
+                            <constraint firstItem="s6J-Ws-vkt" firstAttribute="trailing" secondItem="BC4-NS-gN6" secondAttribute="trailing" constant="16" id="WWV-XZ-dhf"/>
+                            <constraint firstItem="s6J-Ws-vkt" firstAttribute="trailing" secondItem="Sjl-Ee-X5N" secondAttribute="trailing" constant="16" id="bdv-ot-9rs"/>
+                            <constraint firstItem="BC4-NS-gN6" firstAttribute="top" secondItem="iAg-LB-kKA" secondAttribute="bottom" constant="8" id="cri-r4-yhN"/>
+                            <constraint firstItem="s6J-Ws-vkt" firstAttribute="trailing" secondItem="BC4-NS-gN6" secondAttribute="trailing" constant="16" id="i9G-nq-yCN"/>
+                            <constraint firstItem="iAg-LB-kKA" firstAttribute="top" secondItem="Sjl-Ee-X5N" secondAttribute="bottom" constant="8" id="kDB-mk-TkI"/>
+                            <constraint firstItem="Sjl-Ee-X5N" firstAttribute="leading" secondItem="s6J-Ws-vkt" secondAttribute="leading" constant="16" id="kHx-dd-UaN"/>
+                            <constraint firstItem="s6J-Ws-vkt" firstAttribute="trailing" secondItem="iAg-LB-kKA" secondAttribute="trailing" constant="16" id="kWl-cZ-RNQ"/>
+                            <constraint firstItem="iAg-LB-kKA" firstAttribute="leading" secondItem="s6J-Ws-vkt" secondAttribute="leading" constant="16" id="kYp-Ch-H11"/>
+                            <constraint firstItem="SYF-VK-xpj" firstAttribute="centerY" secondItem="G4C-WG-9Yn" secondAttribute="centerY" id="sid-sb-k9P"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="s6J-Ws-vkt"/>
                     </view>
