--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -8,10 +8,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Table View Controller-->
+        <!--Random Users Table View Controller-->
         <scene sceneID="SMh-Uu-rkI">
             <objects>
-                <tableViewController id="4OV-NC-iVc" sceneMemberID="viewController">
+                <tableViewController id="4OV-NC-iVc" customClass="RandomUsersTableViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="i5j-Bo-i0d">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -20,17 +20,11 @@
                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <items>
-                                <navigationItem title="Title" id="ybl-Mo-5vj">
-                                    <barButtonItem key="rightBarButtonItem" systemItem="add" id="p8v-cE-h6c">
-                                        <connections>
-                                            <segue destination="6tJ-4H-DDa" kind="show" id="o5T-yK-ZQa"/>
-                                        </connections>
-                                    </barButtonItem>
-                                </navigationItem>
+                                <navigationItem title="Title" id="ybl-Mo-5vj"/>
                             </items>
                         </navigationBar>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="307-zh-Guz">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="307-zh-Guz" customClass="UserTableViewCell" customModule="Random_Users" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="72" width="375" height="43.666667938232422"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="307-zh-Guz" id="wak-su-aTo">
@@ -42,7 +36,7 @@
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name Here:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nmh-ja-q1a">
-                                            <rect key="frame" x="93" y="12" width="185" height="21"/>
+                                            <rect key="frame" x="93" y="12" width="195" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
@@ -51,6 +45,8 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="userImage" destination="Z9P-mZ-jPw" id="w8h-yS-nIz"/>
+                                    <outlet property="userName" destination="nmh-ja-q1a" id="k1u-iV-VaH"/>
                                     <segue destination="6tJ-4H-DDa" kind="show" id="Yx0-bY-vTK"/>
                                 </connections>
                             </tableViewCell>
@@ -63,12 +59,12 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kgN-rZ-r9I" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-178.40000000000001" y="-138.0809595202399"/>
+            <point key="canvasLocation" x="-178.40000000000001" y="-138.17733990147784"/>
         </scene>
-        <!--View Controller-->
+        <!--Detail View Controller-->
         <scene sceneID="wDY-hu-EVU">
             <objects>
-                <viewController modalPresentationStyle="fullScreen" id="6tJ-4H-DDa" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="fullScreen" id="6tJ-4H-DDa" customClass="DetailViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="o9J-gT-lgc">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -103,13 +99,16 @@
                         <viewLayoutGuide key="safeArea" id="iMw-wC-pz6"/>
                     </view>
                     <navigationItem key="navigationItem" id="zSo-hT-6KM"/>
+                    <connections>
+                        <outlet property="userEmail" destination="Jkg-2d-jfO" id="OMP-5N-Rej"/>
+                        <outlet property="userImage" destination="phc-TU-VRf" id="Jyw-t7-AAc"/>
+                        <outlet property="userName" destination="6uA-mc-F0i" id="etZ-g8-qEN"/>
+                        <outlet property="userPhone" destination="VFA-J4-E0u" id="uQX-Ke-Mnr"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IwM-oR-J9O" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="520.79999999999995" y="-138.17733990147784"/>
         </scene>
     </scenes>
-    <inferredMetricsTieBreakers>
-        <segue reference="o5T-yK-ZQa"/>
-    </inferredMetricsTieBreakers>
 </document>
